add para receber token

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         function onClick() {
             alert("Você caiu no conto do vigario!!!")
         }
+
+        function getTokenTest(evt) {
+            console.log(evt.data);
+        }
     </script>
 </head>
 
