--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 			const urlBase = window.location.origin;
 			const parent = window.parent;
+			const urlBaseParent = window.parent.location.origin;
 			setTimeout(() => {
-				parent.postMessage("aqui estou mais um dia", urlBase);
+				parent.postMessage("aqui estou mais um dia", urlBaseParent);
 			}, 500);
 		</script>
 	</head>
